# rsmooth

./: .gitignore  Cargo.toml  README.md  TODO.md
src/: bin.rs  error.rs  example.md  example.rs  file.rs  lib.rs  libreoffice.rs  m4.rs  metadata.rs  pandoc.rs  templating.rs  tera.rs  util.rs
src/filters/: expand_paths.rs  mod.rs  template.rs
