[package]
name = "rsmooth"
version = "0.3.1"
authors = ["72nd <msg@frg72.com>"]
edition = "2018"
license = "MIT"
description = "Opinionated wrapper for pandoc using YAML headers for configuration"
readme = "README.md"
documentation = "https://github.com/72nd/rsmooth"
homepage = "https://github.com/72nd/rsmooth"
repository = "https://github.com/72nd/rsmooth"
keywords = ["cli", "pandoc", "pdf", "markdown"]
categories = ["command-line-utilities"]
exclude = [
	"misc/*",
]

[lib]
name = "lib"
path = "src/lib.rs"

[[bin]]
name = "rsmooth"
path = "src/bin.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = "3.0.0-beta.2"
env_logger = "0.7.1"
log = "0.4"
regex = "1"
serde = { version = "1.0.117", features = [ "derive" ] }
serde_json = "1.0.59"
shellexpand = "2.0.0"
tempfile = "3.1.0"
tera = "1.5.0"
